// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChickenEditor component: Should render in add new mode 1`] = `
<ChickenEditorRenderer
  breed=""
  hatched=""
  name=""
  onFieldChanged={[Function]}
  onSaveForm={[Function]}
/>
`;

exports[`ChickenEditor component: Should render in edit mode 1`] = `
<ChickenEditorRenderer
  breed="Cuckoo Maran"
  hatched="2016-10-05"
  name="Chicken1"
  onFieldChanged={[Function]}
  onSaveForm={[Function]}
/>
`;
